# prometheus-edge-trigger

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.json  config.toml  flake.nix  module.nix  overlay.nix  package.nix
.github/workflows/: rust.yml
src/: config.rs  main.rs  mdns.rs  trigger.rs
