[package]
name = "prometheus-edge-trigger"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
prometheus-edge-detector = { version = "0.2", default-features = false, features = ["rustls-tls"] }
mdns = { version = "1.1", git = "https://github.com/icewind1991/mdns", branch = "tokio-1" }
tokio = { version = "1.0", features = ["macros", "time", "fs", "rt-multi-thread"] }
main_error = "0.1"
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
log = "0.4.16"
env_logger = "0.9.0"
err-derive = "0.3.1"
serde_json = "1.0.79"
rumqttc = "0.12.0"
hostname = "0.3.1"

[dev-dependencies]
maplit = "1.0.2"
