[package]
name = "prometheus-edge-trigger"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
prometheus-edge-detector = { version = "0.2.0", default-features = false, features = ["rustls-tls"] }
mdns = "2.0.2"
tokio = { version = "1.20.1", features = ["macros", "time", "fs", "rt-multi-thread"] }
main_error = "0.1.2"
futures-util = "0.3.21"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.140", features = ["derive"] }
toml = "0.5.9"
log = "0.4.17"
env_logger = "0.9.0"
err-derive = "0.3.1"
serde_json = "1.0.82"
rumqttc = "0.12.0"
hostname = "0.3.1"

[dev-dependencies]
maplit = "1.0.2"
