[package]
name = "prometheus-edge-trigger"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
rust-version = "1.71.0"

[dependencies]
prometheus-edge-detector = { version = "0.3.0", default-features = false, features = ["rustls-tls"] }
mdns = "3.0.0"
tokio = { version = "1.36.0", features = ["macros", "time", "fs", "rt-multi-thread"] }
main_error = "0.1.2"
futures-util = "0.3.30"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
log = "0.4.20"
env_logger = "0.11.1"
thiserror = "1.0.57"
serde_json = "1.0.113"
rumqttc = "0.23.0"
hostname = "0.3.1"
secretfile = "0.1.0"

[dev-dependencies]
maplit = "1.0.2"
